# device_board_hpmicro

./: BUILD.gn  Kconfig.liteos_m.boards  Kconfig.liteos_m.defconfig.boards  Kconfig.liteos_m.shields  OAT.xml  README.en.md  README.md
application/: BUILD.gn  Kconfig.liteos_m.defconfig.board
application/gpio/: BUILD.gn  app_gpio_in.c  app_gpio_irq.c  app_gpio_out.c
application/lwip/: BUILD.gn
application/watchdog/: BUILD.gn  app_watchdog.c
drivers/: BUILD.gn
hpm5300evk/: Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  ohos.build
hpm5300evk/liteos_m/: BUILD.gn  board.c  board.h
hpm5300evk/liteos_m/ld/: liteos_flash_xip.ld
hpm5300evk/liteos_m/littlefs/: hpm_littlefs.c  hpm_littlefs_drv.c
hpm6280evk/: Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  ohos.build
hpm6280evk/liteos_m/: BUILD.gn  board.c  board.h
hpm6280evk/liteos_m/driver/: uart.c
hpm6280evk/liteos_m/ld/: liteos_flash_xip.ld
hpm6280evk/liteos_m/littlefs/: hpm_littlefs_drv.c
hpm6300evk/: Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  ohos.build
hpm6300evk/liteos_m/: BUILD.gn  board.c  board.h
hpm6300evk/liteos_m/driver/: uart.c
hpm6300evk/liteos_m/ld/: liteos_flash_xip.ld
hpm6300evk/liteos_m/littlefs/: hpm_littlefs_drv.c
hpm6300evk/liteos_m/lwip_adapter/: hpm_lwip.c  hpm_lwip.h
hpm6750evk/: BUILD.gn  Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board
hpm6750evk/liteos_m/: BUILD.gn  board.c  board.h  config.gni
hpm6750evk/liteos_m/driver/: uart.c
hpm6750evk/liteos_m/ld/: liteos_flash_xip.ld
hpm6750evk/liteos_m/littlefs/: BUILD.gn  hpm_littlefs.c  hpm_littlefs_drv.c  hpm_littlefs_drv.h
hpm6750evk/liteos_m/lwip_adapter/: BUILD.gn  ethernetif.c  ethernetif.h  hpm_lwip.c  hpm_lwip.h  lwipopts.h
hpm6750evk2/: Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  ohos.build
hpm6750evk2/liteos_m/: BUILD.gn  board.c  board.h  config.gni
hpm6750evk2/liteos_m/driver/: uart.c  uart.h
hpm6750evk2/liteos_m/ld/: liteos_flash_xip.ld
hpm6750evk2/liteos_m/littlefs/: BUILD.gn  hpm_littlefs.c  hpm_littlefs.h  hpm_littlefs_drv.h
hpm6750evk2/liteos_m/lwip_adapter/: BUILD.gn  ethernetif.c  ethernetif.h  hpm_lwip.c  hpm_lwip.h  lwipopts.h
hpm6800evk/: Kconfig.liteos_m.board  Kconfig.liteos_m.defconfig.board  ohos.build
hpm6800evk/liteos_m/: BUILD.gn  board.c  board.h
hpm6800evk/liteos_m/driver/: uart.c
hpm6800evk/liteos_m/ld/: liteos_flash_xip.ld
hpm6800evk/liteos_m/lwip_adapter/: hpm_lwip.c  hpm_lwip.h  lwipopts.h
