# Copyright (c) 2022 HPMicro.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//kernel/liteos_m/liteos.gni")
import("$LITEOSTHIRDPARTY/lwip/lwip.gni")
import("$LITEOSTOPDIR/components/net/lwip-2.1/lwip_porting.gni")

module_switch = defined(LOSCFG_NET_LWIP_SACK)
module_name = get_path_info(rebase_path("."), "name")
kernel_module(module_name) {
  sources = LWIP_PORTING_FILES + LWIPNOAPPSFILES -
            [ "$LWIPDIR/api/sockets.c" ] + [ 
            "ethernetif.c",
            "hpm_lwip.c" ] + LWIPERFFILES

  include_dirs = [ "//utils/native/lite/include" ]
  
  visibility += [
    "*",
  ]
}

# path "." must be in first for include lwip_adapter/lwipopts.h 
config("public") {
  include_dirs = [ "." ] + LWIP_PORTING_INCLUDE_DIRS + LWIP_INCLUDE_DIRS
}


